src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import "xmat-library";
@import "xmat-vars";
// Include theme styles for core and each component used in your app.
// Alternatively, you can import and @include the theme mixins for each component
// that you are using.
@include angular-material-theme($xmat-theme);

/* fallback */
@font-face {
  font-family: 'Material Icons';
  font-style: normal;
  font-weight: 400;
  src: url("assets/fonts/MaterialIcons-Regular.woff2") format('woff2');
}

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  line-height: 1;
  letter-spacing: normal;
  text-transform: none;
  display: inline-block;
  white-space: nowrap;
  word-wrap: normal;
  direction: ltr;
  -moz-font-feature-settings: 'liga';
  font-feature-settings: 'liga';
  -moz-osx-font-smoothing: grayscale;
}

xmat-app {
  > mat-sidenav-container {
    > mat-sidenav.mat-drawer.xmat-sidenav {
      width: 250px;
      background-color: map-get($xmat-colors, primary);
      color: map-get($xmat-colors, primary-contrast);
      text-align: center;
    }

    div.xmat-router-outlet-wrap {
      padding: 2 * $xmat-pad;
    }
  }
}

